# OpenGL-utility

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cpp.hint  doxyfile.in
examples/debug/: CMakeLists.txt  main.cpp
examples/debug/shaders/: fragmentShader.frag  vertexShader.vert
examples/model/: CMakeLists.txt  main.cpp
examples/model/shaders/: fragmentShader.frag  vertexShader.vert
examples/model_loading/: CMakeLists.txt  main.cpp
examples/model_loading/shaders/: fragmentShader.frag  vertexShader.vert
examples/movement/: CMakeLists.txt  main.cpp
examples/movement/shaders/: fragmentShader.frag  lightSourceShader.vert  vertexShader.vert
include/: camera.hpp  color.hpp  core.hpp  material.hpp  object.hpp  openglu.hpp  shader.hpp  texture.hpp  transformable.hpp  vertexArray.hpp
include/lighting/: ambient.hpp  point.hpp  spotlight.hpp
include/model/: mesh.hpp  model.hpp
src/: camera.cpp  color.cpp  core.cpp  material.cpp  object.cpp  openglu.cpp  shader.cpp  texture.cpp  transformable.cpp  vertexArray.cpp
src/lighting/: ambient.cpp  point.cpp  spotlight.cpp
src/model/: mesh.cpp  model.cpp
styles/: custom.css  custom_dark_theme.css
